--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "start_url": "https://marathitrends.in/index.html",
-  "background_color": "#3367D6",
+  "background_color": "#00508a",
   "display": "standalone",
-  "theme_color": "#3367D6"
+  "theme_color": "#00508a"
 }
